# BU_Apollo_SM_Production_Scripts

./: .gitignore  README.md  mac_addr.csv
BootMedia/: make_sd_zynq.sh  make_ssd.sh
BootMedia/boot/address_table/: address_apollo.xml
BootMedia/boot/address_table/modules_rev2a_xczu7ev/: CM_Mon.xml  CM_single_USP.xml  FW_INFO.xml  PL_MEM.xml  SERV_rev2a.xml  SLAVE_I2C.xml
BootMedia/rootfs/soft/: xvcserver  xvcserver.c
BootMedia/rootfs/soft/clocks/: CMakeCache.txt  CMakeLists.txt  Makefile  Si5344-RevD-APLSMHQ-Registers.h  clock_sync.c  clock_sync_320M_LHC  cmake_install.cmake  i2c-chip.c
BootMedia/rootfs/soft/clocks/CONFIGS/: CONFIG.toml
BootMedia/rootfs/soft/devmem/: devmem2  devmem2.c
IBERTpy/: dth.py  dth.sh  dth_eyescan.tcl  eyescan.tcl  eyescan_plot.py  generate_plot.py  generate_plot.sh  mac_addr.csv  manual_eyescan.tcl  program_clocks.py  program_ipmc.py  program_ipmc.sh  sm_mgt_eyescan.py  top.ltx
IPMCpy/: program_ipmc.py
